# SatoriCompiler

./: .gitignore  CMakeLists.txt  README.md  debug.bat
assets/: code.cpp  cpp.lex  ebnf.lex  error.cpp  grammer.def  lab2.stx  lab3.lex  lab3.stx  lab3.txt  lab4.stx  lab4.txt  lab5.stx  lab5.txt  lexer.def  rlcf.stx  select.stx  syntax.ebnf  syntax.lex  syntex.lex  test.cpp  test.ebnf  tree.def  wjy.stx  work20.stx
assets/ebnf/: gram.ebnf
assets/lex/: cpp.lex  ebnf.lex  func.lex  lab3.lex  lab5.lex  psl.lex  rsc.lex  syntax.lex
assets/outputs/: LLVM.txt
assets/sem/: test.sem
assets/src/: func.txt  lab4.txt  lab5 new.txt  lab5.txt  roft.psl  test.psl  test.rsc
assets/stx/: func.stx  lab2.stx  lab3.stx  lab4.stx  lab5 new.stx  lab5.stx  lab5r.stx  psl.stx  rlcf.stx  rsc expr.estx  rsc-1 opt.estx  rsc-1.estx  rsc.estx  select.stx
assets/tmp/: test.cpp  wjy.stx  work20.stx
assets/tree/: AST.txt
docs/: TODO.md  专题一设计.md  专题三设计.md  专题二设计.md  专题五设计.md  专题六设计.md  专题四设计.md  中间代码生成.md  开悟编译器项目简要总结说明.md
outputs/0620/: eslr_analyze.txt  first.txt  follow.txt  lex_init_rsc.txt  lr_items.txt  mapping.txt  pro_seg.txt  products.txt  tokens_rsc.txt
src/: main.cpp
src/codegen/: asm.cpp  asm.h  regis.cpp  regis.h  stack.h  stcak.cpp
src/common/: ast.cpp  ast.h  cst.cpp  cst.h  dumper.h  fa.cpp  fa.h  gram.cpp  gram.h  token.cpp  token.h
src/irgen/: action.cpp  action.h  context.h  instr.cpp  instr.h  ir_dump.cpp  ir_dump.h  ret_info.cpp  ret_info.h  sem.cpp  sem.h  ssa.cpp  ssa.h  sym_tbl.cpp  sym_tbl.h  type.cpp  type.h  use.cpp  use.h  visitor.cpp  visitor.h
src/lexer/: lexdef.cpp  lexdef.h  lexer.cpp  lexer.h  nfa.cpp  nfa.h  regexp.cpp  regexp.h  test.cpp  test.h  viewer.h
src/parser/: ebnf.cpp  ebnf.h  gram.cpp  gram.h  parser.cpp  parser.h  syntax.cpp  syntax.h  tok_view.h
src/utils/: apply.h  log.cpp  log.h  meta.cpp  meta.h  nested_map.h  stl.cpp  stl.h  str.h  table-.cpp  table.cpp  table.h  tok_view.h  tree.h  (+2 more)
test/: ast_test.cpp  cst_test.cpp  def.h  def_test.cpp  eslr_test.cpp  irgen_test.cpp  lab5.cpp  lexer_test.cpp  log_test.cpp  meta_test.cpp  nfa_test.cpp  opg_test.cpp  parser_test.cpp  pat_test.cpp  prd_test.cpp  psl_test.cpp  pta_test.cpp  sem_test.cpp  slr1_test.cpp  spt_test.cpp  tbl_test.cpp  test.h  test.sem
(+66 files in other folders)
